# BrushEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  lang_stats.py  tree.ps1
doc/: General.md
doc/C++/: C++.md
doc/Vulkan/: Vulkan.md
src/: Update-CMakeModules.ps1  cmake-modules.json  main.cpp
src/base/: CMakeLists.txt  base_math.h  base_types.h  color_light.cpp  gaussRand.h  geometry.cpp  image_process.cpp  interpolation.cpp  log.cpp  log.h  random.cpp  stroke.cpp
src/engine/: CMakeLists.txt  engine_init.cpp  engine_init.h  engine_state.cpp  engine_state.h  render_loop.cpp  render_loop.h  tool_switcher.cpp  tool_switcher.h  window_proc.cpp  window_proc.h
src/render/: CMakeLists.txt  blend_mode.cpp  blend_mode.h  brush_renderer.cpp  brush_renderer.h  canvas.cpp  canvas.h  gpu_brush_renderer.cpp  gpu_brush_renderer.h  gpu_canvas.cpp  gpu_canvas.h  layer.cpp  layer.h  render_target.cpp  render_target.h  texture.cpp  texture.h  ui_panel.cpp  ui_panel.h
src/sys/: CMakeLists.txt  brush.cpp  brush.h  brush_circle.cpp  brush_circle.h  brush_marker.cpp  brush_marker.h  brush_pencil.cpp  brush_pencil.h  brush_watercolor.cpp  brush_watercolor.h  input_sample.cpp  input_sample.h  shortcut.cpp  shortcut.h  tool_manager.cpp  tool_manager.h  tool_type.h  ui_manager.cpp  ui_manager.h
src/tool/: CMakeLists.txt  tool_base.cpp  tool_base.h  tool_crop.cpp  tool_crop.h  tool_ellipse_select.cpp  tool_ellipse_select.h  tool_eraser.cpp  tool_eraser.h  tool_eyedropper.cpp  tool_eyedropper.h  tool_lasso.cpp  tool_lasso.h  tool_magic_wand.cpp  tool_magic_wand.h  tool_move.cpp  tool_move.h  tool_pen.cpp  tool_pen.h  tool_poly_lasso.cpp  tool_poly_lasso.h  tool_rect_select.cpp  tool_rect_select.h  tool_rotate_canvas.cpp  tool_rotate_canvas.h  tool_text.cpp  tool_text.h  tool_zoom.cpp  tool_zoom.h
src/vulkan/: CMakeLists.txt  brush_dab.frag  brush_dab.vert  composite.frag  composite.vert  vk_brush_pipeline.cpp  vk_brush_pipeline.h  vk_buffer.cpp  vk_buffer.h  vk_canvas_tex.cpp  vk_canvas_tex.h  vk_commands.cpp  vk_commands.h  vk_composite_pipeline.cpp  vk_composite_pipeline.h  vk_core.cpp  vk_core.h  vk_device.cpp  vk_device.h  vk_imageview.cpp  vk_imageview.h  vk_instance.cpp  vk_instance.h  vk_pipeline.cpp  vk_pipeline.h  vk_renderpass.cpp  vk_renderpass.h  vk_surface.cpp  vk_surface.h  vk_swapchain.cpp  vk_swapchain.h  vk_sync.cpp  vk_sync.h  vk_utils.cpp  vk_utils.h
